--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -24,6 +24,10 @@
         var highlightActivePilots  = {% if user.get_settings.MAP_HIGHLIGHT_ACTIVE == '1' %}true{% else %}false{% endif %};
         var silentSystem = {% if user.get_settings.MAP_SILENT_MAPPING == '1' %}true{% else %}false{% endif %};
         var renderCollapsedConnections = {% if user.get_settings.MAP_RENDER_COLLAPSED == '1' %}true{% else %}false{% endif %};
+        $(document).ready(function() {
+                $('#mapDiv').html(ajax_image);
+                scale({{user.get_settings.MAP_SCALING_FACTOR}});
+                });
     </script>
 {% endblock %}
 {% block contentheader %}
