--- a/evewspace/core/templates/settings.html
+++ b/evewspace/core/templates/settings.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/settings.css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/slider.css" type="text/css" />
+    <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap-slider.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/map_settings.js"></script>
 {% endblock %}
 {% block contentheader %}
     <ul class="nav nav-tabs">
