--- a/evewspace/Map/templates/map_prof_settings.html
+++ b/evewspace/Map/templates/map_prof_settings.html
@@ -3,4 +3,7 @@
     <h4>Destinations</h4>
     <div id="mapProfDestinationsHolder">
     </div>
+    <h4>Display Settings</h4>
+    <div id="mapDisplayHolder">
+    </div>
 </div>
