Fix the top button

--- a/evewspace/Map/templates/map_combined.html
+++ b/evewspace/Map/templates/map_combined.html
@@ -32,7 +32,7 @@
 {% endblock %}
 {% block contentheader %}
 <div id="scrollmenu">
-<div id="backtotop" onclick="window.location.href = '#top';></div>
+<div id="backtotop" onclick="window.location.href = '#';"></div>
 <div id="tobuttons" onclick="window.location.href = '#sysInfoDiv';"></div>
 </div>
 <div class="btn-toolbar">
