Add mass color through labels

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -21,16 +21,16 @@
         <div class="control-group">
             <label class="control-label" for="timeStatusAnchor">Time Status:</label>
             <div class="controls">
-                <input type="radio" id="timeStatusAnchor" class="sysAddInput" name="timeStatus" value="0" checked="checked">Normal &nbsp
-                <input type="radio" class="sysAddInput" name="timeStatus" value="1">End of Life
+                <label for="timeStatusNormal"><input type="radio" id="timeStatusAnchor" class="sysAddInput" name="timeStatus" value="0" checked="checked"> Normal &nbsp</label>
+                <label for="timeStatusEol"><input type="radio" class="sysAddInput" name="timeStatus" value="1"> End of Life</label>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="massStatusAnchor">Mass Status:</label>
             <div class="controls">
-                <input type="radio" id="massStatusAnchor" class="sysAddInput" name="massStatus" value="0" checked="checked">Normal &nbsp
-                <input type="radio" class="sysAddInput" name="massStatus" value="1">First Shrink &nbsp
-                <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
+                <label for="massStatusNormal"><input type="radio" id="massStatusAnchor" class="sysAddInput" name="massStatus" value="0" checked="checked"> Normal &nbsp</label>
+                <label for="massStatusReduced"><input type="radio" class="sysAddInput" name="massStatus" value="1"> First Shrink &nbsp</label>
+                <label for="massStatusCritical"><input type="radio" class="sysAddInput" name="massStatus" value="2"> Critical</label><br />
             </div>
             <br />
             <div>
