--- a/evewspace/API/templates/api_nav.html
+++ b/evewspace/API/templates/api_nav.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="{{STATIC_URL}}js/api_functions.js"></script>
-{% if perms.API.key_required %}
+{% if perms.API.add_apikey or perms.API.change_apikey or perms.API.delete_apikey %}
 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">API</a><ul class="dropdown-menu">
 	<li><a href="#" onclick="GetAPIKeyDialog();">My API Keys</a></li>
 	{% if perms.API.audit_keys %}
