--- a/evewspace/account/templates/group_admin_permissions.html
+++ b/evewspace/account/templates/group_admin_permissions.html
@@ -1,4 +1,4 @@
-<form id="permForm" action="/map/settings/permissions/" method="POST">
+<form id="permForm" action="/account/admin/group/{{group.pk}}/permissions/" method="POST">
 <div class="GroupPermissionsContainer">
     <br /><br />
     <table class="table table-hover">
