add margin to legend to prevent overlap with scrollmenu

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -285,6 +285,9 @@ label[for=massStatusCritical], label[for=sysTypeDangerous] {
     font-weight: bold;
     color: #ff0000;
 }
+#legendDiv {
+    margin-left: 24px;
+}
 #legendDiv ul.inline {
     display: inline;
 }
