add correct class to other wormhole type fieldset

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -49,7 +49,7 @@
                         <div class="span1"><h5><-------></h5></div>
                         <div class="span2">
                             <h5>Other Side</h5>
-                            <fieldset>
+                            <fieldset class="addSystemWormholeType">
                                 <label for="bottomTypeInput">Type:</label>
                                 <input type="text" class="sysAddInput wormholeAuto input-mini" id="bottomTypeInput" name="bottomType" value="K162" onclick="this.value = '';" />
                                 <label class="checkbox" for="bottomBubbledCheckbox">
