Moved ToggleZen and TogglePilotList below the other Toggle* functions.

--- a/evewspace/Map/templates/map_combined.html
+++ b/evewspace/Map/templates/map_combined.html
@@ -42,9 +42,9 @@
     <button id="btnSilentAdd" class="btn btn-mini btn-info" onclick="ToggleSilentAdd();">Silent IGB Mapping: OFF</button>
     <button id='btnKspaceIGB' class='btn btn-mini btn-info' onclick='ToggleKspaceMapping();'>Map K-Space Connections: OFF</button>
     {% endif %}
-    <button id='btnPilotList' class='btn btn-mini btn-info' onclick="togglepilotlist()">Pilot List</button>
+    <button id='btnPilotList' class='btn btn-mini btn-info' onclick="TogglePilotList()">Pilot List</button>
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
-    <button id='btnZen' class='btn btn-mini btn-info' onclick="togglezen()">Zen</button> 
+    <button id='btnZen' class='btn btn-mini btn-info' onclick="ToggleZen()">Zen</button>
     <span style="margin-right: 5px; margin-left: 5px;"></span>
     <input id='scaleSlider' type="text" class="slider" value="" data-slider-min=".1" data-slider-max="2" data-slider-step=".1" data-slider-value="1" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show">
 </div>
