Moved toggle text values to HTML as much as possible.

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -37,14 +37,14 @@
 </div>
 <div class="btn-toolbar">
     <button class='btn btn-mini' onclick="RefreshMap();"><i class="icon-refresh"></i> Refresh</button>
-    <button id="btnRefreshToggle" class="btn btn-mini btn-info" onclick="ToggleAutoRefresh();">Auto Refresh: ON</button>
+    <button id="btnRefreshToggle" class="btn btn-mini btn-info" onclick="ToggleAutoRefresh();">Auto Refresh: <span></span></button>
     {% if is_igb %}
-    <button id="btnSilentAdd" class="btn btn-mini btn-info" onclick="ToggleSilentAdd();">Silent IGB Mapping: OFF</button>
-    <button id='btnKspaceIGB' class='btn btn-mini btn-info' onclick='ToggleKspaceMapping();'>Map K-Space Connections: OFF</button>
+    <button id="btnSilentAdd" class="btn btn-mini btn-info" onclick="ToggleSilentAdd();">Silent IGB Mapping: <span></span></button>
+    <button id='btnKspaceIGB' class='btn btn-mini btn-info' onclick='ToggleKspaceMapping();'>Map K-Space Connections: <span></span></button>
     {% endif %}
-    <button id='btnPilotList' class='btn btn-mini btn-info' onclick="TogglePilotList()">Pilot List</button>
+    <button id='btnPilotList' class='btn btn-mini btn-info' onclick="TogglePilotList()">Pilot List: <span></span></button>
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
-    <button id='btnZen' class='btn btn-mini btn-info' onclick="ToggleZen()">Zen</button>
+    <button id='btnZen' class='btn btn-mini btn-info' onclick="ToggleZen()">Zen: <span></span></button>
     <span style="margin-right: 5px; margin-left: 5px;"></span>
     <input id='scaleSlider' type="text" class="slider" value="" data-slider-min=".1" data-slider-max="2" data-slider-step=".1" data-slider-value="{{user.get_settings.MAP_SCALING_FACTOR}}" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show">
 </div>
@@ -55,11 +55,11 @@
 <div id="legendDiv">
     <em>Legend:</em>&nbsp;
     <ul class="inline">
-        <li><img src='{{STATIC_URL}}images/pvp.png' height='32' width='32'></img>  PVP Activity </li>
-        <li> <img src='{{STATIC_URL}}images/carebears.png' height='32' width='32'></img>  NPC Kills </li>
-        <li> <img src='{{STATIC_URL}}images/mylocation.png' height='32' width='32'></img>  You are here! </li>
+        <li><img src='{{STATIC_URL}}images/pvp.png' height='32' width='32'/>  PVP Activity </li>
+        <li> <img src='{{STATIC_URL}}images/carebears.png' height='32' width='32'/>  NPC Kills </li>
+        <li> <img src='{{STATIC_URL}}images/mylocation.png' height='32' width='32'/>  You are here! </li>
     {% if perms.SiteTracker.can_sitetracker %}
-        <li><img src='{{STATIC_URL}}images/farm.png' height='32' width='32'></img>  SiteTracker Up! </li>
+        <li><img src='{{STATIC_URL}}images/farm.png' height='32' width='32'/>  SiteTracker Up! </li>
     {% endif %}
     </ul>
 </div>
@@ -73,4 +73,3 @@
     <a name="sysInfo"></a>
 </div>
 {% endblock %}
-
