Calculate distance from root is now a setting
Introduce the MAP_ADVANCED_LOGGING setting on the Map. Turn off to
eliminate tracking of distance to root system in the logging of
signatures.

Other advanced logging features can easily be linked to this setting as
well.

Also some cleanup.

--- a/evewspace/Map/templates/general_settings.html
+++ b/evewspace/Map/templates/general_settings.html
@@ -20,6 +20,13 @@
             <td>Downtimes before Burning Escalation:</td>
             <td> <input type="text" class="input-mini" name="escdowntimes" value="{{escdowntimes}}"></td>
         </tr>
+        <tr>
+            <td>Advanced Logging:</td>
+            <td> 
+                <input id='advlogging' type='radio' name='advlogging' value='1' {% if advlogging == '1' %}checked='checked'{% endif %} /> On &nbsp;
+                <input type='radio' name='advlogging' value='0' {% if advlogging == '0' %}checked='checked'{% endif %} /> Off
+            </td>
+        </tr>
     </table>
     <br />
     <input type="submit" class="btn btn-primary" value="Save Changes">
