--- a/evewspace/Recruitment/templates/recruit_register.html
+++ b/evewspace/Recruitment/templates/recruit_register.html
@@ -50,4 +50,36 @@
         </div>
     </form>
 </div>
+<br /><br />
+<div class="" style="text-align: center;">
+    <h4 class="text-info">
+        If you have applied before, please fill out the form below to login: <br />
+        <br />
+        If you do not remember your password, please contact a recruiter. <br /><br />
+    </h4>
+</div>
+<div class="application-holder">
+    <form class="form form-horizontal" action="/recruitment/login/" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="next_page" value="{{next_page}}">
+        <input type="hidden" name="app_type" value="{{app_type}}">
+        <div class="control-group">
+            <label class="control-label" for="username2">Username:</label>
+            <div class="controls">
+                <input type="text" class="input" name="username2" widt>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="password3">Password:</label>
+            <div class="controls">
+                <input type="password" class="input" name="password3">
+            </div>
+        </div>
+        <div class="control-group">
+            <div class="controls">
+                <br /><button class="btn btn-info" type="submit">Login</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
