--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -59,6 +59,7 @@
     {% if perms.SiteTracker.can_sitetracker %}
         <li><img src="{{STATIC_URL}}images/farm.png" height="32" width="32"/>  SiteTracker Up! </li>
     {% endif %}
+        <li><img src="{{STATIC_URL}}images/scan.png" height="32" width="32"/>  Unscanned (last 24h) </li>
     </ul>
 </div>
 <div id="logDiv" class="logDiv">
