--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -60,6 +60,7 @@
         <li><img src="{{STATIC_URL}}images/farm.png" height="32" width="32"/>  SiteTracker Up! </li>
     {% endif %}
         <li><img src="{{STATIC_URL}}images/scan.png" height="32" width="32"/>  Unscanned (last 24h) </li>
+        <li><img src="{{STATIC_URL}}images/isis_scan.png"/>  Partially scanned</li>
     </ul>
 </div>
 <div id="logDiv" class="logDiv">
