--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -47,17 +47,7 @@
         </div>
 		</div>
 
-		<div id="baseContentHeadDiv" class="contenthead">
-            {% if perms.SiteTracker.can_sitetracker %}
-            {% load sitetracker %}
-            <div class="row">
-            <div id="stPlaceholderDiv" class="well well-small span9">
-                {% st_status_bar %}
-            </div>
-        </div>
-            {% endif %}
-            {%block contentheader %}{%endblock%}
-		</div>
+		<div id="baseContentHeadDiv" class="contenthead">{%block contentheader %}{%endblock%}</div>
 	
 		<div id="baseContentDiv" class="content">
             <div id="modalHolder" class="modal hide">
