--- a/evewspace/Map/templates/edit_sig_form.html
+++ b/evewspace/Map/templates/edit_sig_form.html
@@ -5,15 +5,15 @@
             {% if field.errors %}
             <br /><span class="label label-warning">{{field.errors}}</span> <br />
             {% endif %}
-            {{field.label_tag}} {{field}} &nbsp
+            {{field.label_tag}} {{field}} &nbsp;
         {% endfor %}
         <input class="btn btn-primary" type="submit" value="Save Sig" />
     </form>
     <script type="text/javascript">
         $("#sigEditForm").submit(function(e){
-                    e.preventDefault();
-                    EditSignature({{system.pk}}, {{sig.pk}});
-                    return false;
-                });
+            e.preventDefault();
+            EditSignature({{system.pk}}, {{sig.pk}});
+            return false;
+        });
     </script>
 </div>
