--- a/evewspace/SiteTracker/templates/st_status_bar.html
+++ b/evewspace/SiteTracker/templates/st_status_bar.html
@@ -1,5 +1,10 @@
 {% load static %}
 <script src="{% get_static_prefix %}js/sitetracker_functions.js" type="text/javascript"></script>
+<script>
+$(document).ready(function(){
+    ReloadSTBar();
+});
+</script>
 <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/sitetracker.css" />
 {% load sitetracker %}
 <div id="stStatusHeader" class="stStatusHeader text-left" data-toggle="collapse" data-target="#stFleetListing">
