--- a/evewspace/Map/templates/system_details_combined.html
+++ b/evewspace/Map/templates/system_details_combined.html
@@ -19,11 +19,11 @@
     {% endif %}
     <div class="sysClassSpan">
         {% if system.is_wspace %}
-        <div class="span2"> 
-            <strong>Class: {{system.sysclass}}</strong>
+        <div class="span2">
+            <strong>Class: <span id="sysClass">{{system.sysclass}}</span></strong>
         </div>
         <div class="span2">
-            <strong>Effect: {{system.effect}}</strong>
+            <strong>Effect: <span id="sysEffect">{{system.effect}}</span></strong>
         </div>
         <div class="span2">
             <strong>Probable Statics:
