Django 1.8 File update

--- a/evewspace/account/templates/create_user.html
+++ b/evewspace/account/templates/create_user.html
@@ -15,7 +15,13 @@
             <label class='control-label' for='emailInput'>Email (Optional):</label>
             <div class='controls'>
                 <input id='emailInput' type='text' name='email'>
-                <span style="margin-top: 5px;" class='label label-info'>If provided, the initial password will be emailed.</span>
+            </div>
+        </div>
+        <div class="control-group">
+
+            <label class="control-label" for="emailPassword">Email New Password</label>
+        <div class="controls">
+            <input type="checkbox" id="emailPassword" name="email_password">
             </div>
         </div>
         <br />
