Added Legal Notice to homepage, deleted it from other pages

--- a/evewspace/core/templates/home.html
+++ b/evewspace/core/templates/home.html
@@ -73,3 +73,8 @@
 	</div>
 </div>
 {%endblock%}
+{% block footer %}
+<div class="copyrightNotice center_text">
+EVE Online and the EVE logo are the registered trademarks of CCP hf. All rights are reserved worldwide. All other trademarks are the property of their respective owners. EVE Online, the EVE logo, EVE and all associated logos and designs are the intellectual property of CCP hf. All artwork, screenshots, characters, vehicles, storylines, world facts or other recognizable features of the intellectual property relating to these trademarks are likewise the intellectual property of CCP hf. CCP hf. has granted permission to Eve W-Space to use EVE Online and all associated logos and designs for promotional and information purposes on its website but does not endorse, and is not in any way affiliated with, Eve W-Space. CCP is in no way responsible for the content on or functioning of this website, nor can it be liable for any damage arising from the use of this website.
+</div>
+{% endblock %}
