Pre-fill unknown WH in IGB template

--- a/evewspace/Map/templates/edit_unknown_system.html
+++ b/evewspace/Map/templates/edit_unknown_system.html
@@ -9,7 +9,7 @@
                             <h4>System name{% if system.friendlyname %} for {{system.friendlyname}} {% endif %}:</h4>
                         </div>
                         <div class="col-md-6 input-margin">
-                            <input type="text" id="sysNameBox" class="sysAddInput systemAuto form-control input-sm" name="systemName" value="">
+                            <input type="text" id="sysNameBox" class="sysAddInput systemAuto form-control input-sm" name="systemName" value="{{current_system.name}}">
                         </div>
                     </div>
                 </div>
